Fix user put and changed structure of posts
